fixed various issues around the native build and added working native image configuration